# rust-helia

./: .gitignore  API_REFERENCE.md  ARCHITECTURE.md  BITSWAP_COMPLETE.md  BITSWAP_OPTIMIZATIONS.md  BITSWAP_PROGRESS.md  BOOTSTRAP_EXAMPLE_ENHANCED.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_GAP_ANALYSIS.md  Cargo.toml  DOCUMENTATION_SUMMARY.md  EVENTS_EXAMPLE.md  EVENTS_IMPLEMENTATION.md  GETTING_STARTED.md  HELIA_JS_COMPARISON.md  HELIA_JS_COMPATIBILITY.md  HONEST_STATUS.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TESTS_COMPLETE.md  IPNS_COMPLETE.md  IPNS_DHT_ENHANCEMENT.md  ITERATION_SUMMARY.md  JSON_P2P_EXAMPLE.md  JS_HELIA_LIBP2P_PATTERN.md  LEGACY_CLEANUP_SUMMARY.md  LICENSE-APACHE  LICENSE-MIT  MFS_IMPLEMENTATION_COMPLETE.md  MFS_NESTED_OPERATIONS_COMPLETE.md  MFS_PHASE4_COMPLETION.md  MODULE_GAP_ANALYSIS.md  MODULE_GAP_PLAN.md  MODULE_GAP_SUMMARY.md  NEXT_STEPS.md  P2P_SUCCESS.md  PACKAGE_PLANS.md  PROJECT_COMPLETION.md  (+30 more)
helia/: Cargo.toml
helia-bitswap/: Cargo.toml
helia-bitswap/src/: behaviour.rs  constants.rs  coordinator.rs  lib.rs  message.rs  network.rs  network_new.rs  pb.rs  peer_manager.rs  peer_want_lists.rs  session.rs  stats.rs  stream.rs  utils.rs  wantlist.rs  wantlist_new.rs
helia-bitswap/tests/: p2p_bitswap.rs
helia-block-brokers/: COMPLETION.md  Cargo.toml  MODULE_STATUS.md  README.md  TRUSTLESS_GATEWAY.md
helia-block-brokers/src/: bitswap.rs  lib.rs  trustless_gateway.rs
helia-block-brokers/tests/: basic.rs  trustless_gateway.rs
helia-car/: CAR_V1_IMPLEMENTATION.md  COMPLETION.md  Cargo.toml  MODULE_STATUS.md
helia-car/src/: car_reader.rs  car_writer.rs  export.rs  import.rs  lib.rs
helia-car/tests/: car_v1_format.rs
helia-dag-cbor/: COMPLETION.md  Cargo.toml  MODULE_STATUS.md
helia-dag-cbor/src/: dag_cbor.rs  errors.rs  lib.rs  tests.rs
helia-dag-json/: COMPLETION.md  Cargo.toml  Cargo.toml.bak  MODULE_STATUS.md
helia-dag-json/src/: dag_json.rs  errors.rs  lib.rs  tests.rs
helia-dnslink/: COMPLETION_SUMMARY.md  Cargo.toml  Cargo.toml.bak  DNSLINK_IMPLEMENTATION.md  MODULE_STATUS.md  OVERVIEW.md  README.md
helia-dnslink/src/: dnslink.rs  errors.rs  lib.rs  namespaces.rs  resolver.rs
helia-dnslink/tests/: dnslink_tests.rs
helia-http/: COMPARISON_WITH_JS.md  COMPLETION.md  Cargo.toml  MODULE_STATUS.md
helia-http/src/: lib.rs
helia-interface/: Cargo.toml
helia-interface/src/: blocks.rs  errors.rs  lib.rs  pins.rs  routing.rs
helia-interop/: Cargo.toml  README.md
helia-interop/src/: lib.rs
helia-interop/tests/: dht_routing.rs  end_to_end.rs  ipns_integration.rs  p2p_integration.rs
helia-ipns/: COMPLETION_SUMMARY.md  Cargo.toml  Cargo.toml.bak  DHT_IMPLEMENTATION.md  IPNS_IMPLEMENTATION.md  MODULE_ASSESSMENT.md  NEXT_STEPS.md  PROGRESS.md  PROTOBUF_IMPLEMENTATION.md  README.md  SESSION_SUMMARY.md  SIGNATURE_IMPLEMENTATION.md  build.rs
helia-ipns/proto/: ipns.proto
helia-ipns/src/: constants.rs  errors.rs  ipns_impl.rs  keys.rs  lib.rs  local_store.rs  protobuf.rs  record.rs  routing.rs
helia-ipns/tests/: dht_router_tests.rs  ipns_tests.rs
helia-json/: COMPLETION.md  Cargo.toml  MODULE_STATUS.md
helia-json/examples/: PSK_IMPLEMENTATION_SUMMARY.md  README.md  custom_libp2p.rs
helia-json/src/: errors.rs  json.rs  lib.rs  tests.rs
helia-mfs/: COMPLETION.md  Cargo.toml  Cargo.toml.bak  MODULE_STATUS.md  README.md
helia-mfs/src/: lib.rs  operations.rs  path.rs
helia-routers/: Cargo.toml  HTTP_ROUTERS.md
helia-routers/src/: delegated_http_routing.rs  http_gateway_routing.rs  lib.rs  libp2p_routing.rs
helia-strings/: COMPLETION.md  Cargo.toml  MODULE_STATUS.md
helia-strings/src/: lib.rs
helia-unixfs/: COMPLETION.md  COMPLETION_SUMMARY.md  Cargo.toml  MODULE_STATUS.md  README.md  build.rs
helia-unixfs/examples/: README.md  basic_file.rs  custom_libp2p.rs  directories.rs  large_file.rs  metadata.rs
helia-unixfs/proto/: unixfs.proto
helia-unixfs/src/: chunker.rs  dag_pb.rs  errors.rs  lib.rs  tests.rs  unixfs.rs
helia-unixfs/src/pb/: mod.rs  unixfs.pb.rs
helia-utils/: Cargo.toml
helia-utils/src/: blockstore.rs  blockstore_tests.rs  blockstore_with_bitswap.rs  datastore.rs  helia.rs  lib.rs  libp2p_behaviour.rs  logger.rs  metrics.rs  pins_tests.rs
helia/examples/: 01_basic_node.rs  02_block_storage.rs  03_unixfs_files.rs  04_dag_cbor.rs  05_car_files.rs  06_pinning.rs  07_custom_config.rs  README.md
helia/src/: lib.rs
rust-helia/: Cargo.toml  test_p2p.sh
rust-helia/examples/: 01_basic_node.rs  02_block_storage.rs  03_unixfs_files.rs  04_dag_cbor.rs  05_car_files.rs  06_pinning.rs  07_custom_config.rs  08_json_codec.rs  09_p2p_content_sharing.rs  10_ipns_publish_resolve.rs  10_json_p2p_sharing.rs  11_dag_cbor_p2p_sharing.rs  11_mfs_filesystem.rs  README.md  basic_find_providers.rs  find_providers.rs  provider_workflow.rs  real_world_providers.rs
rust-helia/src/: lib.rs
