[workspace]
members = [
    "rust-helia",
    "helia-interface", 
    "helia-utils",
    "helia-bitswap",
    "helia-block-brokers",
    "helia-car",
    "helia-dag-cbor",
    "helia-dag-json",
    "helia-dnslink",
    "helia-http",
    "helia-interop",
    "helia-ipns",
    "helia-json",
    "helia-mfs",
    "helia-routers",
    "helia-strings",
    "helia-unixfs",
]

resolver = "2"

[workspace.package]
version = "0.1.3"
edition = "2021"
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/cyberfly-io/rust-helia"
repository = "https://github.com/cyberfly-io/rust-helia"
authors = ["Helia Rust Contributors"]
rust-version = "1.75"

[workspace.dependencies]
# Core async runtime and utilities
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Networking and libp2p (Rust equivalent of @libp2p/*)
libp2p = { version = "0.54.1", features = ["full"] }
libp2p-kad = "0.46"
libp2p-noise = "0.45"
libp2p-yamux = "0.46"
libp2p-tcp = "0.42"
libp2p-webrtc = "0.7"
libp2p-websocket = "0.44"
libp2p-mdns = "0.46"
libp2p-dcutr = "0.12"
libp2p-autonat = "0.13"
libp2p-identify = "0.45"
libp2p-ping = "0.46"
libp2p-upnp = "0.3"

# IPFS and multiformats
cid = { version = "0.11", features = ["serde-codec"] }
multihash = "0.19"
multihash-codetable = { version = "0.1.4", features = ["sha2"] }
multiaddr = "0.18"
multibase = "0.9"
multicodec = "0.3"
unsigned-varint = "0.8"

# Data formats and encoding
cbor4ii = "0.3"  # For DAG-CBOR
ipld-core = "0.4"
dag-cbor = "0.2"
dag-json = "0.2"

# Storage and databases
sled = "0.34"  # For datastore
rocksdb = "0.21"  # Alternative datastore

# Cryptography
sha2 = "0.10"
blake2 = "0.10"
sha3 = "0.10"

# Utilities
bytes = "1.0"
pin-project-lite = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
clap = { version = "4.0", features = ["derive"] }

# DNS resolution
trust-dns-resolver = "0.23"

# HTTP client/server
reqwest = { version = "0.11", features = ["json", "stream"] }
axum = "0.7"
tower = "0.4"
hyper = "1.0"

# Time and async utilities
chrono = { version = "0.4", features = ["serde"] }

# Testing
tokio-test = "0.4"

# Progress events and metrics
dashmap = "5.5"  # For concurrent hash maps
once_cell = "1.19"  # For lazy statics

# Streams and iterators
async-stream = "0.3"
pin-utils = "0.1"