[package]
name = "helia-car"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "CAR (Content Addressed aRchive) format support for Helia IPFS implementation"

[dependencies]
helia-interface = { version = "0.1.2", path = "../helia-interface" }
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
libipld = { version = "0.16", features = ["serde-codec"] }
multihash = "0.19"
cid = "0.11"
bytes = "1.0"
thiserror = "1.0"
async-stream = "0.3"
serde_ipld_dagcbor = "0.6"
unsigned-varint = { version = "0.8", features = ["codec"] }
