[package]
name = "helia-dag-cbor"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "DAG-CBOR support for Helia"

[dependencies]
helia-interface = { path = "../helia-interface" }

# Core async and future utilities
async-trait.workspace = true
futures.workspace = true
tokio.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# IPFS and multiformats
cid.workspace = true
multihash.workspace = true

# CBOR serialization
serde.workspace = true
serde_cbor = "0.11"

# Data structures
bytes.workspace = true

[dev-dependencies]
tokio-test = "0.4"
helia = { path = "../helia" }
