[package]
name = "helia-dag-json"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "DAG-JSON support for Helia"

[dependencies]
helia-interface = { version = "0.1.2", path = "../helia-interface" }

# Core async and future utilities
async-trait.workspace = true
futures.workspace = true
tokio.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# IPFS and multiformats
cid.workspace = true
multihash.workspace = true

# JSON serialization
serde.workspace = true
serde_json.workspace = true

# Data structures
bytes.workspace = true

[dev-dependencies]
tokio-test = "0.4"
rust-helia = { version = "0.1.2", path = "../rust-helia" }
