[package]
name = "helia-dnslink"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "DNSLink resolution for Helia"

[dependencies]
helia-interface = { path = "../helia-interface" }

# Core async runtime
async-trait.workspace = true
tokio.workspace = true

# Error handling
thiserror.workspace = true

# IPFS and multiformats
cid.workspace = true

# DNS resolution
trust-dns-resolver = "0.23"

[dev-dependencies]
helia = { path = "../helia" }
multihash.workspace = true
