[package]
name = "helia-http"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "HTTP-only implementation of Helia for lightweight IPFS access"

[dependencies]
helia-interface = { version = "0.1.2", path = "../helia-interface" }
tokio = { workspace = true, features = ["sync", "rt"] }
async-trait = { workspace = true }
cid = { workspace = true }
bytes = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
libp2p = { workspace = true, features = ["identify"] }
trust-dns-resolver = "0.23"
multihash = "0.19"
thiserror = { workspace = true }
