[package]
name = "helia-routers"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Routing abstractions for Helia (content and peer routing)"

[dependencies]
helia-interface = { version = "0.1.2", path = "../helia-interface" }

# Core async runtime
async-trait.workspace = true
tokio.workspace = true

# Error handling
thiserror.workspace = true

# IPFS and multiformats
cid.workspace = true
libp2p.workspace = true

# HTTP client and serialization
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.0"

# Logging
tracing = "0.1"

# Hashing (for synthetic peer IDs)
seahash = "4.1"

[dev-dependencies]
multihash.workspace = true
