[package]
name = "rust-helia"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "An implementation of IPFS in Rust"

[dependencies]
# Helia crates
helia-interface = { version = "0.1.4", path = "../helia-interface" }
helia-utils = { version = "0.1.4", path = "../helia-utils" }

# Core async and future utilities
async-trait.workspace = true
futures.workspace = true
tokio.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# IPFS and multiformats
cid.workspace = true
multihash.workspace = true
multiaddr.workspace = true

# libp2p
libp2p.workspace = true
libp2p-kad.workspace = true
libp2p-noise.workspace = true
libp2p-yamux.workspace = true
libp2p-tcp.workspace = true
libp2p-websocket.workspace = true
libp2p-mdns.workspace = true
libp2p-dcutr.workspace = true
libp2p-autonat.workspace = true
libp2p-identify.workspace = true
libp2p-ping.workspace = true

# Storage
sled.workspace = true

# Utilities
bytes.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# DNS
trust-dns-resolver.workspace = true

[dev-dependencies]
tokio-test.workspace = true
helia-unixfs = { version = "0.1.3", path = "../helia-unixfs" }
helia-dag-cbor = { version = "0.1.3", path = "../helia-dag-cbor" }
helia-dag-json = { version = "0.1.3", path = "../helia-dag-json" }
helia-json = { version = "0.1.4", path = "../helia-json" }
helia-mfs = { version = "0.1.3", path = "../helia-mfs" }
helia-car = { version = "0.1.3", path = "../helia-car" }
helia-routers = { version = "0.1.3", path = "../helia-routers" }
helia-ipns = { version = "0.1.3", path = "../helia-ipns" }
helia-bitswap = { version = "0.1.3", path = "../helia-bitswap" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
env_logger = "0.11"

# Provider discovery examples
[[example]]
name = "basic_find_providers"
path = "examples/basic_find_providers.rs"

[[example]]
name = "find_providers"
path = "examples/find_providers.rs"

[[example]]
name = "provider_workflow"
path = "examples/provider_workflow.rs"

[[example]]
name = "real_world_providers"
path = "examples/real_world_providers.rs"

# P2P content sharing
[[example]]
name = "09_p2p_content_sharing"
path = "examples/09_p2p_content_sharing.rs"

# IPNS publish and resolve
[[example]]
name = "10_ipns_publish_resolve"
path = "examples/10_ipns_publish_resolve.rs"

# MFS filesystem operations
[[example]]
name = "11_mfs_filesystem"
path = "examples/11_mfs_filesystem.rs"
required-features = []